--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^5.11.6",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "path": "^0.12.7"
   }
 }
