--- a/project/package.json
+++ b/project/package.json
@@ -9,15 +9,19 @@
     "bootstrap": "^4.5.3",
     "js-object-equal": "^1.0.0",
     "react": "^17.0.1",
+    "react-alice-carousel": "^2.1.0",
     "react-avatar-edit": "^0.9.0",
     "react-bootstrap": "^1.4.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
+    "react-image-show": "^0.3.4",
     "react-images-upload": "^1.2.8",
     "react-redux": "^7.2.2",
+    "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.27.13",
     "react-testing-library": "^8.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
