--- a/project/package.json
+++ b/project/package.json
@@ -12,7 +12,9 @@
     "react": "^17.0.1",
     "react-alice-carousel": "^2.1.0",
     "react-avatar-edit": "^0.9.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.4.0",
+    "react-card-carousel": "^1.1.3",
     "react-card-slide": "^1.0.13",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
