Fix wl stules + fix getAllIdeas

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ DB_USER=AdminSuper
 DB_PASS=rktnrf37
 PORT=3001
 KEY=secket-key
+
+mongodb+srv://AdminSuper:rktnrf37@cluster0.i7upe.mongodb.net/Iwish?retryWrites=true&w=majority
